# movies-metadata-organizer

./: README.md  install.ps1  install.sh  pyproject.toml  use.bat  use.sh
src/: cli.py
src/services/: __init__.py
src/src/: __init__.py  cli.py  config.py  main.py
src/src/models/: __init__.py  media_file.py  track.py
src/src/prompts/: __init__.py  questions.py
src/src/services/: identifier.py  metadata_editor.py  orchestrator.py  remuxer.py  renamer.py  subtitle_matcher.py
src/src/utils/: constants.py  logger.py  validators.py
src/utils/: __init__.py
