[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaelix"
version = "0.2.0"
description = "Automated MKV metadata editing, track renaming, and batch renaming tool."
authors = [{ name = "N I K A N" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
kaelix = "src.main:main"

[project.urls]
Homepage = "https://github.com/nikannixro/kaelix"
Repository = "https://github.com/nikannixro/kaelix"
Issues = "https://github.com/nikannixro/kaelix/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
